use local js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>تاریخ شمسی در جاوااسکریپت</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://unpkg.com/jalali-moment/dist/jalali-moment.browser.js"></script>
+  <script src="/dist/jalali-moment.browser.js"></script>
 </head>
 <body>
 <article>
