--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>تاریخ شمسی در جاوااسکریپت</title>
+  <title>تبدیل بین تاریخ هجری خورشیدی و میلادی</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="/dist/jalali-moment.browser.js"></script>
 </head>
