fix(index): correct src

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>تبدیل بین تاریخ هجری خورشیدی و میلادی</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/dist/jalali-moment.browser.js"></script>
+  <script src="dist/jalali-moment.browser.js"></script>
 </head>
 <body>
 <article>
