chore(index): remove default values

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <section>
       <form id="convertToJalaliForm">
-        <input id="gregorianInput" placeHolder="YYYY/MM/DD" value="1989/01/24">
+        <input id="gregorianInput" placeHolder="YYYY/MM/DD" value="">
         <button type="submit">to Jalali</button>
         <span id="jalaliOutput"></span>
       </form>
@@ -21,7 +21,7 @@
 
     <section>
       <form id="convertToGregorianForm">
-        <input id="jalaliInput" placeHolder="YYYY/MM/DD" value="1370/03/16">
+        <input id="jalaliInput" placeHolder="YYYY/MM/DD" value="">
         <button id="convertToGregorian">to Gregorian</button>
         <span id="gregorianOutput"></span>
       </form>
@@ -30,7 +30,7 @@
 
     <section>
       <form id="validateShamsiForm">
-        <input id="validatingDate" placeHolder="YYYY/MM/DD" value="1370/03/16">
+        <input id="validatingDate" placeHolder="YYYY/MM/DD" value="">
         <button type="submit">validate</button>
         <span id="ValidationOutput"></span>
       </form>
