feat(index): rm buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section>
         <form id="convertToJalaliForm">
           <input id="gregorianInput">
-          <button type="submit">to Jalali</button>
+          <span>to Jalali:</span>
           <span id="jalaliOutput"></span>
         </form>
 
@@ -23,7 +23,7 @@
       <section>
         <form id="convertToGregorianForm">
           <input id="jalaliInput">
-          <button id="convertToGregorian">to Gregorian</button>
+          <span>to Gregorian:</span>
           <span id="gregorianOutput"></span>
         </form>
       </section>
