--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Gregorian</h2>
         <form id="convertToJalaliForm">
           <button onclick='return copyToClipboard("gregorian")'>📋</button>
-          <input id="gregorian" onclick="this.value = ''">
+          <input id="gregorian">
         </form>
 
       </section>
@@ -23,7 +23,7 @@
       <section class='centerSec'>
         <h2>Jalali</h2>
         <form id="convertToGregorianForm">
-          <input id="jalali" onclick="this.value = ''">
+          <input id="jalali">
           <button onclick='return copyToClipboard("jalali")'>📋</button>
         </form>
       </section>
